<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_bulk_edit"
        android:title="@string/bulk_edit_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_analytics"
        android:title="Análise de Estoque"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_account"
        android:title="Conta e sincronização"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_subscription"
        android:title="@string/menu_subscription"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="Sobre"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:title="Sair"
        app:showAsAction="never" />
</menu>


