<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/color_surface"
    tools:context="br.com.gameloop.estoquesimples.AnalyticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/analyticsContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/screen_padding_horizontal"
            android:paddingRight="@dimen/screen_padding_horizontal"
            android:paddingTop="@dimen/screen_padding_top"
            android:paddingBottom="@dimen/screen_padding_bottom"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analytics_title"
                android:textAppearance="@style/TextAppearance.Estoque.Title"
                android:layout_marginBottom="@dimen/field_gap" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Análises preditivas baseadas no histórico de movimentações dos últimos 90 dias"
                android:textAppearance="@style/TextAppearance.Estoque.Supporting"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:id="@+id/analyticsCardsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/analyticsLockedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/screen_padding_horizontal"
            android:paddingRight="@dimen/screen_padding_horizontal"
            android:paddingTop="@dimen/screen_padding_top"
            android:paddingBottom="@dimen/screen_padding_bottom"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_hero"
                android:orientation="vertical"
                android:padding="22dp">

                <TextView
                    android:id="@+id/tvAnalyticsLockedMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics_title"
                    android:textAppearance="@style/TextAppearance.Estoque.Title.OnBrand" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/field_gap"
                    android:text="@string/analytics_locked_message"
                    android:textColor="@color/color_text_on_brand_muted"
                    android:textSize="15sp"
                    android:lineSpacingExtra="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_gap"
                android:background="@drawable/bg_surface"
                android:orientation="vertical"
                android:padding="@dimen/group_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics_benefits_title"
                    android:textAppearance="@style/TextAppearance.Estoque.Section"
                    android:layout_marginBottom="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics_benefit_forecast"
                    android:textAppearance="@style/TextAppearance.Estoque.Body"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="@dimen/row_gap"
                    android:layout_marginBottom="@dimen/row_gap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics_benefit_turnover"
                    android:textAppearance="@style/TextAppearance.Estoque.Body"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="@dimen/row_gap"
                    android:layout_marginBottom="@dimen/row_gap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics_benefit_restock"
                    android:textAppearance="@style/TextAppearance.Estoque.Body"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="@dimen/row_gap"
                    android:layout_marginBottom="@dimen/row_gap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics_benefit_speed"
                    android:textAppearance="@style/TextAppearance.Estoque.Body"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="@dimen/row_gap"
                    android:layout_marginBottom="@dimen/row_gap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/analytics_benefit_trends"
                    android:textAppearance="@style/TextAppearance.Estoque.Body"
                    android:drawableStart="@drawable/ic_check"
                    android:drawablePadding="@dimen/row_gap" />
            </LinearLayout>

            <Button
                android:id="@+id/btnGoProFromAnalytics"
                style="@style/Widget.Estoque.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_gap"
                android:text="@string/analytics_unlock_cta" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_gap"
                android:text="@string/analytics_footnote"
                android:textAppearance="@style/TextAppearance.Estoque.Caption" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
